--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <script>
         // *** CONFIGURATIE ***
         // 👇👇👇 PLAK HIER JOUW GOOGLE SCRIPT URL 👇👇👇
-        const GOOGLE_SCRIPT_URL = "PLAK_HIER_JE_LINK_MET_EXEC"; 
+        const GOOGLE_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbwKpEIkK07_D-4UL2UHGjdx4WAzW9I_ti9uYO4-5D-OQXbng9_vDDHcRbYv5Gn_-VJu/exec"; 
         
         // Nieuwe cache key voor deze versie
         const CACHE_KEY = 'fc_zondag_v5_headcount'; 
@@ -260,3 +260,4 @@
     </script>
 </body>
 </html>
+
