--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <script>
         // *** CONFIGURATIE ***
         // 👇 PLAK HIER JOUW URL MET /exec 👇
-        const GOOGLE_SCRIPT_URL = "PLAK_HIER_JE_URL"; 
+        const GOOGLE_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbwKpEIkK07_D-4UL2UHGjdx4WAzW9I_ti9uYO4-5D-OQXbng9_vDDHcRbYv5Gn_-VJu/exec"; 
         
         const CACHE_KEY = 'fc_zondag_v9_clean'; 
         let players = [];
@@ -247,3 +247,4 @@
     </script>
 </body>
 </html>
+
